--- a/components/hero.scss
+++ b/components/hero.scss
@@ -1,5 +1,30 @@
 .hero {
   display: flex;
   justify-content: center;
-  height: 300px;
+  height: 100%;
+}
+
+.suffix {
+  opacity: 0;
+  position: absolute;
+  white-space: nowrap;
+
+  .timer {
+    width: 100%;
+    background-color: black;
+    height: 3px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    transition: width 2850ms linear;
+  }
+
+  &.active {
+    opacity: 1;
+
+    .timer {
+      width: 0;
+    }
+  }
 }
