--- a/components/hero.scss
+++ b/components/hero.scss
@@ -1,3 +1,6 @@
+$underline-height: 4px;
+$suffix-padding: 5px;
+
 .hero {
   display: flex;
   justify-content: center;
@@ -8,23 +11,28 @@
   opacity: 0;
   position: absolute;
   white-space: nowrap;
+  color: #fff;
 
-  .timer {
-    width: 100%;
-    background-color: black;
-    height: 3px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    transition: width 2850ms linear;
+  > span:not(.timer) {
+    padding: 0 5px;
+    background-color: #7c5295;
   }
 
   &.active {
     opacity: 1;
-
     .timer {
       width: 0;
     }
   }
+}
+
+span + span.timer {
+  width: 100%;
+  background-color: #ee4266;
+  height: $underline-height;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  transition: width 2850ms ease-out;
 }
