--- a/components/header.scss
+++ b/components/header.scss
@@ -1,4 +1,5 @@
 @import '../styles/variables.scss';
+@import '../styles/variables.scss';
 
 .nav {
   display: flex;
@@ -17,6 +18,13 @@
   }
 }
 
-.is-link {
-  margin: 0 0.5em;
+.link {
+  margin: 0 $header-link-vertical-margin;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
