--- a/styles/gradient.scss
+++ b/styles/gradient.scss
@@ -1,3 +1,5 @@
+@import './colors.scss';
+
 .is-gradient {
   background: linear-gradient(-45deg, $pink, $purple, $pink, $purple);
   background-size: 400% 400%;
