--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,4 +1,7 @@
 $transition: 0.2s ease-in-out;
 
+$nav-height: 72px;
+$page-width: 90%;
+
 $header-link-vertical-margin: 0.75em;
 $underline-height: 4px;
