--- a/components/hero.scss
+++ b/components/hero.scss
@@ -6,7 +6,7 @@ $suffix-padding: 5px;
 .hero {
   display: flex;
   justify-content: center;
-  height: 100%;
+  height: calc(100% - #{$nav-height});
 }
 
 .suffix {
