--- a/components/layout.scss
+++ b/components/layout.scss
@@ -1,3 +1,5 @@
+@import '../styles/variables.scss';
+
 .layout {
   height: 100%;
   display: flex;
@@ -5,7 +7,6 @@
 }
 .main {
   flex: 1 0 auto;
-  margin: 0;
 }
 .footer {
   flex-shrink: 0;
