--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 html {
   height: 100%;
 }
@@ -5,4 +7,8 @@ body,
 #__next {
   height: 100%;
   margin: 0;
+}
+.page {
+  margin: 0 auto;
+  width: $page-width;
 }
