--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,7 @@
 $transition: 0.2s ease-in-out;
 
 $nav-height: 72px;
+$footer-height: 56px;
 $page-width: 90%;
 
 $header-link-vertical-margin: 0.75em;
