:lipstick: Add colored backgrounds

--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,2 +1,10 @@
 $purple: #7c5295;
 $pink: #ee4266;
+
+.has-pink-background {
+  background-color: $pink;
+}
+
+.has-purple-background {
+  background-color: $purple;
+}
