--- a/styles/gradient.scss
+++ b/styles/gradient.scss
@@ -17,3 +17,11 @@
     background-position: 0% 50%;
   }
 }
+
+.has-pink-background {
+  background-color: $pink;
+}
+
+.has-purple-background {
+  background-color: $purple;
+}
