--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,10 +1,3 @@
 $purple: #7c5295;
 $pink: #ee4266;
-
-.has-pink-background {
-  background-color: $pink;
-}
-
-.has-purple-background {
-  background-color: $purple;
-}
+$white: #fff;
