:lipstick: Fix hero style

--- a/components/hero.scss
+++ b/components/hero.scss
@@ -16,7 +16,8 @@ $suffix-padding: 5px;
     }
 
     & div div {
-      width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     .suffix {
