:sparkles: Implements custom icons :sob:

--- a/components/header-link.scss
+++ b/components/header-link.scss
@@ -9,11 +9,15 @@
   &:hover {
     .underline {
       width: calc(100% - #{$header-link-vertical-margin * 2});
+      display: block;
     }
   }
 
   @include touch {
     margin-top: 10px;
+    .underline {
+      display: none;
+    }
   }
 }
 
