--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -5,6 +5,11 @@ $roboto: 'Roboto', sans-serif;
 
 body {
   font-family: $roboto;
+  height: 100vh;
+}
+
+#__next {
+  height: 100%;
 }
 
 .is-mono {
