:bug: Sticky footer

--- a/components/header.scss
+++ b/components/header.scss
@@ -12,6 +12,7 @@ $nav-vertical-spacing: 10px;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  margin: auto;
   width: $page-width;
   padding: $nav-vertical-spacing 0;
   background-color: $white;
