--- a/styles/global.scss
+++ b/styles/global.scss
@@ -7,11 +7,8 @@
 }
 
 .page {
-  margin: 0 auto;
+  margin: 1em auto;
   width: $page-width;
-  & > .title {
-    margin-top: 1em;
-  }
 }
 
 .fullheight {
