:lipstick: Set max width to 1200px

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,7 +3,7 @@ $linear-transition: 0.2s linear;
 
 $nav-height: 68px;
 $footer-height: 56px;
-$page-width: 90%;
+$page-width: 1200px;
 
 $header-link-vertical-margin: 0.75em;
 $underline-height: 4px;
