:iphone: Improve responsive design with new max-width

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -10,7 +10,8 @@ $nav-vertical-spacing: 10px;
   align-items: center;
   justify-content: space-between;
   margin: auto;
-  width: $page-width;
+  max-width: $page-width;
+  width: 90%;
   padding: $nav-vertical-spacing 0;
   background-color: $white;
   max-height: $nav-height;
