--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,6 +14,13 @@
   @include touch {
     padding: 0 1em;
   }
+
+  & > h1 {
+    margin-top: 1em;
+    @include touch {
+      margin-top: 0.5em;
+    }
+  }
 }
 
 .fullheight {
