--- a/pages/blog/post.module.scss
+++ b/pages/blog/post.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/mixin.scss';
 
-article {
+article .body {
   width: 36em;
   margin: 0 auto 50px auto;
   max-width: 100%;
@@ -28,7 +28,10 @@ article {
 }
 
 .header {
-  margin: 50px 0;
+  margin: 50px 0 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
 
   @include touch {
     margin: 25px 0;
