:bento: Restore assets

--- a/pages/blog/post.module.scss
+++ b/pages/blog/post.module.scss
@@ -28,7 +28,7 @@ article .body {
 }
 
 .header {
-  margin: 50px 0 15px;
+  margin: 50px 15px 15px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
