:bug: Tentative fix for progressive image

--- a/components/progressive-image.module.scss
+++ b/components/progressive-image.module.scss
@@ -1,3 +1,7 @@
+.progressive-image {
+  display: flex;
+}
+
 .overlay {
   position: absolute;
   filter: blur(1px);
@@ -5,4 +9,7 @@
   clip-path: inset(0);
   top: 0;
   right: 0;
+  &.hidden {
+    opacity: 0;
+  }
 }
