--- a/styles/global.scss
+++ b/styles/global.scss
@@ -48,3 +48,13 @@
 .scene {
   height: 100vh;
 }
+
+:root {
+  --spacing-xxs: 0.25rem;
+  --spacing-xs: 0.5rem;
+  --spacing-s: 1rem;
+  --spacing-m: 1.5rem;
+  --spacing-l: 2rem;
+  --spacing-xl: 3rem;
+  --spacing-xxl: 4rem;
+}
