--- a/components/post-link.module.scss
+++ b/components/post-link.module.scss
@@ -4,7 +4,7 @@
 
 .post-link {
   width: 100%;
-  height: 150px;
+  min-height: 150px;
   position: relative;
 
   display: flex;
@@ -18,7 +18,7 @@
 
   @include touch {
     flex-direction: row;
-    height: 170px;
+    min-height: 170px;
     justify-content: center;
 
     .cta {
