--- a/components/post-link.module.scss
+++ b/components/post-link.module.scss
@@ -39,6 +39,7 @@
   @include mobile {
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
     .cta {
       margin-top: 1em;
       margin-left: auto;
