feat: improve iframe tweet ui

--- a/pages/blog/post.module.scss
+++ b/pages/blog/post.module.scss
@@ -91,3 +91,13 @@ article .body {
     }
   }
 }
+
+iframe {
+  display: block;
+  height: 580px;
+  width: 500px;
+  margin: 1em auto;
+  #brand {
+    display: none;
+  }
+}
