feat: ui improvements

--- a/pages/blog/post.module.scss
+++ b/pages/blog/post.module.scss
@@ -34,6 +34,7 @@ article .body {
 
   img {
     padding: 1em;
+    margin: 1em 0;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     max-width: 100%;
