--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'icomoon';
-  src: url('fonts/icomoon.ttf?48zs1x') format('truetype'), url('fonts/icomoon.woff?48zs1x') format('woff'),
-    url('fonts/icomoon.svg?48zs1x#icomoon') format('svg');
+  src: url('/fonts/icomoon.ttf?48zs1x') format('truetype'), url('/fonts/icomoon.woff?48zs1x') format('woff'),
+    url('/fonts/icomoon.svg?48zs1x#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
