chore: improve reach section

--- a/components/reach.module.scss
+++ b/components/reach.module.scss
@@ -2,7 +2,7 @@
 @import '../styles/variables.scss';
 
 form {
-  margin: 2em auto 0 auto;
+  margin: 0 auto 0 auto;
   display: block;
   width: 100%;
   label {
