--- a/app/styles/burger.css
+++ b/app/styles/burger.css
@@ -1,11 +1,11 @@
 .burger.light {
-  --hover-color: var(--black);
-  --color: rgb(229, 231, 235);
+  --hover-color: hsl(206 24% 9%);
+  --color: hsl(252 96.9% 97.4%);
 }
 
 .burger.dark {
-  --hover-color: rgb(229, 231, 235);
-  --color: var(--black);
+  --hover-color: hsl(252 96.9% 97.4%);
+  --color: hsl(206 24% 9%);
 }
 
 .burger:before,
